# tablet-mapper

./: .gitignore  CMakeLists.txt  conanfile.py
src/: gdk.hpp  libinput.hpp  libinput_t.cpp  tablet_mapper.cpp  udev.hpp  xlib.hpp
